--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<link type="text/css" rel="stylesheet" href="stylesheets/main.css" />
   <head>
     <title>Klift - Free Bootstrap 4 Template by Colorlib</title>
     <meta charset="utf-8">
