--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <section class="home-slider js-fullheight owl-carousel">
       <div class="slider-item js-fullheight" style="background-image:url(images/bg_1.jpg);">      	
         <div class="container">
-          <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-end" data-scrollax-parent="true">
+          <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-end" data-scrollax-parent="false">
           <div class="col-md-7 text ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
             <h1 class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">El estilo que quieres, lo encuentras aquí</h1>
             <p data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Los diseños más actuales de la mano de las mejores marcas Hola NURIA.</p>
