--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	  </nav>
     <!-- END nav -->
     
-    <section class="home-slider js-fullheight owl-carousel">
+    <section class="home-slider js-fullheight">
       <div class="slider-item js-fullheight" style="background-image:url(images/bg_1.jpg);">      	
         <div class="container">
           <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-end" data-scrollax-parent="false">
