--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <div class="col-md-7 text ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
             <h1 class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">El estilo que quieres, lo encuentras aquí</h1>
             <p data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Los diseños más actuales de la mano de las mejores marcas Hola NURIA.</p>
-            <p><a href="#" class="btn btn-white btn-outline-white px-4 py-3 mt-3">View our works</a></p>
+            <p><a href="#ourprojects" class="btn btn-white btn-outline-white px-4 py-3 mt-3">View our works</a></p>
           </div>
         </div>
         </div>
